--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@mui/material": "^7.3.5",
     "@phosphor-icons/react": "^2.1.10",
     "@react-pdf/renderer": "^4.3.1",
+    "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "ldrs": "^1.1.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-intl": "^7.1.14",
-    "react-pdf-html": "^2.1.4"
+    "react-pdf-html": "^2.1.4",
+    "react-router": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
