--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/dm-sans": "^5.2.8",
+    "@mdxeditor/editor": "^3.49.1",
     "@mui/material": "^7.3.5",
     "@phosphor-icons/react": "^2.1.10",
     "@react-pdf/renderer": "^4.3.1",
@@ -20,6 +21,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "ldrs": "^1.1.9",
+    "marked": "^17.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
